fixing overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,7 +25,9 @@
 *::before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -37,10 +39,10 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
 body {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
   font-family: 'Zilap Africa';
   background: linear-gradient(
     90deg,
@@ -50,7 +52,6 @@ body {
 }
 
 body {
-  line-height: 24px;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -95,7 +96,6 @@ body {
   .spirit-intro {
     font-weight: 700;
     font-size: 4rem !important;
-    line-height: 1.1rem !important;
     padding-left: 0rem !important;
   }
   .spirit-intro2 {
@@ -163,7 +163,6 @@ body {
   .spirit-intro {
     font-weight: 700;
     font-size: 4rem !important;
-    line-height: 1.1rem !important;
     padding-left: 0rem !important;
   }
   .spirit-intro2 {
@@ -173,7 +172,7 @@ body {
   }
   .sango .back-text {
     position: absolute;
-    top: 7rem !important;
+    top: 4.5rem !important;
     text-align: center;
     width: 100%;
     z-index: -1;
@@ -244,7 +243,6 @@ body {
   }
   .spirit-intro2 {
     font-size: 2.8rem !important;
-    line-height: 6rem !important;
     font-weight: 700;
   }
   .home-slider-item {
